--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>flat-cube</title>
+    <link href="assets/css/FlatCube.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
   </head>
   <body>
-    
+    <div id="app"></div>
+
+    <script src="assets/js/FlatCube.js"></script>
     <script src="assets/js/scripts.js"></script>
   </body>
 </html>
