Added some flair to the site

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link href="assets/css/styles.css" rel="stylesheet">
   </head>
   <body>
+    <h1>FlatCube</h1>
+    <h3>Made with <a href="https://github.com/christopherwk210/flat-cube">🍪</a> by Chris Anselmo</h3>
     <div id="app"></div>
-
     <script src="assets/js/FlatCube.js"></script>
     <script src="assets/js/scripts.js"></script>
   </body>
